version: "0.1"

opam-version: "1.2"
name: "stationary"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core"
  "async"
  "dune"                {build & >= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A static site generator
"

